# Information_Transformation_Algorithms_Task03

./: .gitignore  Cargo.toml
huffman_encoding/: Cargo.toml
huffman_encoding/src/: binary_tree.rs  decoder.rs  encoder.rs  lib.rs  power_calc.rs
src/: binary_tree.rs  decoder.rs  encoder.rs  main.rs  power_calc.rs
working/: small.txt  small_dec.txt  smaller  task01_compact  task01_dec  wikipedia  wikipedia.txt  wikipedia_dec.txt
