[package]
name = "Information_Transformation_Algorithms_Task03"
version = "0.5.2"
edition = "2024"

[dependencies]
#bit_writer_reader = {git = "https://github.com/Strilets-Glib-FI41mn/Information_Transformation_Algorithms_Task02", tag = "0.4.0"}
huffman_encoding = {path = "huffman_encoding"}


#CLI!
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.12.0"
serde = { version = "1.0.226", features = ["derive"] }

[features]
draw = ["huffman_encoding/draw"]
print_converter = ["huffman_encoding/print_converter"]