[package]
name = "huffman_encoding"
version = "0.4.1"
edition = "2024"

[dependencies]
bit_writer_reader = {git = "https://github.com/Strilets-Glib-FI41mn/Information_Transformation_Algorithms_Task02", tag = "0.4.1"}

[features]
draw = []
print_converter = []
#[dev-dependencies]
#fuzzcheck = "0.13.0" #cargo +nightly test